SONARSCALA-109 Fix the issues raised by the analysis of the its